# rust-webgl-demo

./: .gitignore  0.bootstrap.js  Cargo.toml  bootstrap.js  index.html
.github/workflows/: ci.yml
res/shader/: default.frag.glsl  default.vert.glsl  gui.frag.glsl  gui.vert.glsl  point.vert.glsl  select.vert.glsl
src/: gui.rs  lib.rs
www/: full.html  index.html  index.js  package-lock.json  package.json
